disabled form contacto

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
     <footer>
         <section class="contacto">
             <div class="contenedor">
-                <h3 class="titulo">Contacto</h3>
+                <h3 class="titulo">Contacto (Por el momento no funciona)</h3>
                 <form action="" class="formulario">
-                    <input type="text" placeholder="Nombre" name="nombre" required>
-                    <input type="email" placeholder="Correo" name="correo" required>
-                    <textarea name="mensaje" placeholder="Mensaje:"></textarea>
-                    <input class="boton" type="submit" value="Enviar">
+                    <input type="text" placeholder="Nombre" name="nombre" required disabled>
+                    <input type="email" placeholder="Correo" name="correo" required disabled>
+                    <textarea name="mensaje" placeholder="Mensaje:" disabled></textarea>
+                    <input class="boton" type="submit" value="Enviar" disabled>
                 </form>
             </div>
         </section>
