--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <header>
         <div class="contenedor">
             <nav class="menu">
-                <a href="#">Acerca de</a>
-                <a href="#">Trabajos</a>
-                <a href="#">Contacto</a>
+                <a href="#acerca_de">Acerca de</a>
+                <a href="#trabajos">Trabajos</a>
+                <a href="#contacto">Contacto</a>
             </nav>
             
             <div class="contenedor-texto">
                 <div class="texto">
                     <h1 class="nombre">Moshe Shabes Gittler</h1>
-                    <h2 class="profesion">Desarrollador Web</h2>
+                    <h2 class="profesion">Fullstack Web Developer</h2>
                 </div>
             </div>
         </div>
@@ -34,12 +34,13 @@
                     <img src="./files/img/foto.JPG" width="115px" alt="Moshe Shabes">
                 </div>
                 <div class="texto">
-                    <h3 class="titulo">Acerca de</h3>
-                    <p>Lorem ipsum <span class="bold">dolor sit amet</span>,  repellat fugiat molestiae vel, illum, <span class="bold">voluptas sunt fugit</span>, voluptatibus facere architecto.</p>
+                    <h3 class="titulo" id="acerca_de">Acerca de</h3>
+                    <h2 class="cv">Curriculum Vitae</h2>
+                    <iframe src="https://onedrive.live.com/embed?cid=91B1C17D25068A1B&resid=91B1C17D25068A1B%213111&authkey=AAd-xMiip8sWk_o&em=2" width="100%" height="600" frameborder="0"></iframe>
                 </div>
             </div>
         </section>
-        <section class="trabajos">
+        <section class="trabajos" id="trabajos">
             <div class="contenedor">
                 <h3 class="titulo">Trabajos</h3>
                 <div class="contenedor-trabajos">
@@ -66,7 +67,7 @@
         </section>
     </section>
     <footer>
-        <section class="contacto">
+        <section class="contacto" id="contacto">
             <div class="contenedor">
                 <h3 class="titulo">Contacto (Por el momento no funciona)</h3>
                 <form action="" class="formulario">
