fix RD and socual network

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
         </section>
         <section class="redes-sociales">
             <div class="contenedor">
-                <a href="https://twitter.com/mosheshabes" class="twitter" target="_blank"><i class="fa fa-twitter"></i></a>
-                <a href="https://www.youtube.com/channel/UCz2zs8_FbAtIcQhlYBLR8TQ" class="youtube" target="_blank"><i class="fa fa-youtube"></i></a>
-                <a href="https://www.facebook.com/moshnaf" class="facebook" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="https://www.instagram.com/moshe.naftali21/" class="instagram" target="_blank"><i class="fa fa-instagram"></i></a>
                 <a href="https://github.com/moshab97" class="github" target="_blank"><i class="fa fa-github"></i></a>
+                <a href="https://www.facebook.com/moshnaf" class="facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/mosheshabes" class="twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+                <!-- <a href="https://www.youtube.com/channel/UCz2zs8_FbAtIcQhlYBLR8TQ" class="youtube" target="_blank"><i class="fa fa-youtube"></i></a> -->
+                <a href="https://www.instagram.com/moshe.naftali21/" class="instagram" target="_blank"><i class="fa fa-instagram"></i></a>
             </div>
         </section>
     </footer>
