nuevo proyecto chat

--- a/index.html
+++ b/index.html
@@ -110,6 +110,25 @@
                 </p>
               </div>
             </div>
+            <div class="trabajo">
+              <div class="thumb">
+                <a
+                  href="https://socketio-chat-moshab97.herokuapp.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><img
+                    src="https://pluspng.com/img-png/chat-png-png-image-512.png"
+                    alt="Chat"
+                /></a>
+              </div>
+              <div class="descripcion">
+                <p class="nombre">Chat</p>
+                <p class="descripcion">
+                  Chat en vivo con usuarios y salas en vivo. Falta incluir
+                  diseño, responsive design, y funcionalidades extras.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
