--- a/index.html
+++ b/index.html
@@ -136,24 +136,17 @@
     <footer>
       <section class="contacto" id="contacto">
         <div class="contenedor">
-          <h3 class="titulo">Contacto (Por el momento no funciona)</h3>
-          <form action="" class="formulario">
-            <input
-              type="text"
-              placeholder="Nombre"
-              name="nombre"
-              required
-              disabled
-            />
-            <input
-              type="email"
-              placeholder="Correo"
-              name="correo"
-              required
-              disabled
-            />
-            <textarea name="mensaje" placeholder="Mensaje:" disabled></textarea>
-            <input class="boton" type="submit" value="Enviar" disabled />
+          <h3 class="titulo">Contacto</h3>
+          <form
+            id="contact-form"
+            class="formulario"
+            onsubmit="emailjs.sendForm('default_service', 'contacto-portafolio', this); return false;"
+            method="post"
+          >
+            <input type="text" placeholder="Nombre" name="nombre" required />
+            <input type="email" placeholder="Correo" name="correo" required />
+            <textarea name="mensaje" placeholder="Mensaje:"></textarea>
+            <input class="boton" type="submit" value="Enviar" />
           </form>
         </div>
       </section>
@@ -184,5 +177,18 @@
         </div>
       </section>
     </footer>
+    <script
+      type="text/javascript"
+      src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("user_YWSm60ejpxc2HtBEWacS3");
+      })();
+    </script>
   </body>
 </html>
