--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <div class="trabajo">
               <div class="thumb">
                 <a
-                  href="https://koshereats-67779.firebaseapp.com/"
-                  target="_blank"
+                  href="#"
                   rel="noopener noreferrer"
+                  disabled="disabled"
                   ><img
                     src="./files/img/trabajos/kosherEats.png"
                     alt="The Kosher Eats"
@@ -78,8 +78,7 @@
             <div class="trabajo">
               <div class="thumb">
                 <a
-                  href="https://api-meme-599a9.firebaseapp.com"
-                  target="_blank"
+                  href="#"
                   rel="noopener noreferrer"
                   ><img src="./files/img/trabajos/apiMeme.png" alt="Api Meme"
                 /></a>
