--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
           <div class="texto">
             <h3 class="titulo" id="acerca_de">Acerca de</h3>
             <h2 class="cv">Curriculum Vitae</h2>
-            <iframe
-              src="https://onedrive.live.com/embed?cid=91B1C17D25068A1B&resid=91B1C17D25068A1B%213111&authkey=AAd-xMiip8sWk_o&em=2"
-              width="100%"
-              height="600"
-              frameborder="0"
-            ></iframe>
+            <iframe 
+            src="https://onedrive.live.com/embed?cid=91B1C17D25068A1B&resid=91B1C17D25068A1B%218004&authkey=AJQSIByRsVtW07U&em=2" 
+            width="100%"
+            height="600"
+            frameborder="0"
+            >
+            </iframe>
           </div>
         </div>
       </section>
