--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,600i,700"
+      href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,600i,700"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/normalize.css" />
@@ -40,7 +40,7 @@
             <h3 class="titulo" id="acerca_de">Acerca de</h3>
             <h2 class="cv">Curriculum Vitae</h2>
             <iframe 
-            src="https://onedrive.live.com/embed?cid=91B1C17D25068A1B&resid=91B1C17D25068A1B%218004&authkey=AJQSIByRsVtW07U&em=2" 
+            src="http://onedrive.live.com/embed?cid=91B1C17D25068A1B&resid=91B1C17D25068A1B%218004&authkey=AJQSIByRsVtW07U&em=2" 
             width="100%"
             height="600"
             frameborder="0"
@@ -96,7 +96,7 @@
             <div class="trabajo">
               <div class="thumb">
                 <a
-                  href="https://www.enzinga.mx/"
+                  href="http://www.enzinga.mx/"
                   target="_blank"
                   rel="noopener noreferrer"
                   ><img src="./files/img/trabajos/enzinga.png" alt="Enzinga"
@@ -113,11 +113,11 @@
             <div class="trabajo">
               <div class="thumb">
                 <a
-                  href="https://socketio-chat-moshab97.herokuapp.com/"
+                  href="http://socketio-chat-moshab97.herokuapp.com/"
                   target="_blank"
                   rel="noopener noreferrer"
                   ><img
-                    src="https://pluspng.com/img-png/chat-png-png-image-512.png"
+                    src="http://pluspng.com/img-png/chat-png-png-image-512.png"
                     alt="Chat"
                 /></a>
               </div>
@@ -158,24 +158,24 @@
       </section>
       <section class="redes-sociales">
         <div class="contenedor">
-          <a href="https://github.com/moshab97" class="github" target="_blank"
+          <a href="http://github.com/moshab97" class="github" target="_blank"
             ><i class="fa fa-github"></i
           ></a>
           <a
-            href="https://www.facebook.com/moshnaf"
+            href="http://www.facebook.com/moshnaf"
             class="facebook"
             target="_blank"
             ><i class="fa fa-facebook"></i
           ></a>
           <a
-            href="https://twitter.com/mosheshabes"
+            href="http://twitter.com/mosheshabes"
             class="twitter"
             target="_blank"
             ><i class="fa fa-twitter"></i
           ></a>
-          <!-- <a href="https://www.youtube.com/channel/UCz2zs8_FbAtIcQhlYBLR8TQ" class="youtube" target="_blank"><i class="fa fa-youtube"></i></a> -->
+          <!-- <a href="http://www.youtube.com/channel/UCz2zs8_FbAtIcQhlYBLR8TQ" class="youtube" target="_blank"><i class="fa fa-youtube"></i></a> -->
           <a
-            href="https://www.instagram.com/moshe.naftali21/"
+            href="http://www.instagram.com/moshe.naftali21/"
             class="instagram"
             target="_blank"
             ><i class="fa fa-instagram"></i
@@ -189,7 +189,7 @@
     ></script>
     <script
       type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"
+      src="http://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"
     ></script>
     <script type="text/javascript">
       (function () {
