--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="trabajo">
               <div class="thumb">
                 <a
-                  href="http://www.enzinga.mx/"
+                  href="#"
                   target="_blank"
                   rel="noopener noreferrer"
                   ><img src="./files/img/trabajos/enzinga.png" alt="Enzinga"
