upload portafolio and projects

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           <div class="texto">
             <h3 class="titulo" id="acerca_de">Acerca de</h3>
             <h2 class="cv">Curriculum Vitae</h2>
-            <iframe 
-            src="https://onedrive.live.com/embed?cid=91B1C17D25068A1B&resid=91B1C17D25068A1B%218004&authkey=AJQSIByRsVtW07U&em=2" 
-            width="100%"
-            height="600"
-            frameborder="0"
+            <iframe
+              src="https://onedrive.live.com/embed?cid=91B1C17D25068A1B&resid=91B1C17D25068A1B%218004&authkey=AJQSIByRsVtW07U&em=2"
+              width="100%"
+              height="600"
+              frameborder="0"
             >
             </iframe>
           </div>
@@ -56,40 +56,20 @@
             <div class="trabajo">
               <div class="thumb">
                 <a
-                  href="#"
+                  href="https://client-mercadoazul.vercel.app/"
+                  target="_blank"
                   rel="noopener noreferrer"
-                  disabled="disabled"
                   ><img
-                    src="./files/img/trabajos/kosherEats.png"
-                    alt="The Kosher Eats"
+                    src="./files/img/trabajos/mercadoAzul.png"
+                    alt="Mercado Azul"
                 /></a>
               </div>
               <div class="descripcion">
-                <p class="nombre">The Kosher Eats</p>
+                <p class="nombre">Mercado Azul</p>
                 <p class="descripcion">
-                  Replica de Uber Eats.<br />Actualmente se tiene problemas para
-                  subir la versión solucionada de Bugs y con muchas mejoras, la
-                  cual soluciona problemas de Signin y Signup, las nuevas
-                  mejoras incluye subida de archivos, mostrar el menu y
-                  ubicación del restaurante.<br />El frontend está hecho con
-                  Reactjs, el Backend en Nodejs y la base de datos en MongoDB.
-                </p>
-              </div>
-            </div>
-            <div class="trabajo">
-              <div class="thumb">
-                <a
-                  href="#"
-                  rel="noopener noreferrer"
-                  ><img src="./files/img/trabajos/apiMeme.png" alt="Api Meme"
-                /></a>
-              </div>
-              <div class="descripcion">
-                <p class="nombre">Api Meme</p>
-                <p class="descripcion">
-                  Una API la cual la gente puede hacer un CRUD de memes; puede
-                  subir un link con el meme, verlo en la página principal,
-                  modificarlo o eliminarlo.
+                  Métricas de Mercado Libre México, mostrando los productos más
+                  vendidos por categoría, los trends en busquedas del día, y
+                  recomendaciones hechas por Mercado Azul.
                 </p>
               </div>
             </div>
@@ -113,7 +93,7 @@
             <div class="trabajo">
               <div class="thumb">
                 <a
-                  href="http://socketio-chat-moshab97.herokuapp.com/"
+                  href="https://socketio-chat-moshenaftali.herokuapp.com/"
                   target="_blank"
                   rel="noopener noreferrer"
                   ><img
@@ -126,6 +106,41 @@
                 <p class="descripcion">
                   Chat en vivo con usuarios y salas en vivo. Falta incluir
                   diseño, responsive design, y funcionalidades extras.
+                </p>
+              </div>
+            </div>
+            <div class="trabajo">
+              <div class="thumb">
+                <a href="#" rel="noopener noreferrer" disabled="disabled"
+                  ><img
+                    src="./files/img/trabajos/kosherEats.png"
+                    alt="The Kosher Eats"
+                /></a>
+              </div>
+              <div class="descripcion">
+                <p class="nombre">The Kosher Eats</p>
+                <p class="descripcion">
+                  Replica de Uber Eats.<br />Actualmente se tiene problemas para
+                  subir la versión solucionada de Bugs y con muchas mejoras, la
+                  cual soluciona problemas de Signin y Signup, las nuevas
+                  mejoras incluye subida de archivos, mostrar el menu y
+                  ubicación del restaurante.<br />El frontend está hecho con
+                  Reactjs, el Backend en Nodejs y la base de datos en MongoDB.
+                </p>
+              </div>
+            </div>
+            <div class="trabajo">
+              <div class="thumb">
+                <a href="#" rel="noopener noreferrer"
+                  ><img src="./files/img/trabajos/apiMeme.png" alt="Api Meme"
+                /></a>
+              </div>
+              <div class="descripcion">
+                <p class="nombre">Api Meme</p>
+                <p class="descripcion">
+                  Una API la cual la gente puede hacer un CRUD de memes; puede
+                  subir un link con el meme, verlo en la página principal,
+                  modificarlo o eliminarlo.
                 </p>
               </div>
             </div>
