update link mercadoazul

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="trabajo">
               <div class="thumb">
                 <a
-                  href="https://client-mercadoazul.vercel.app/"
+                  href="https://mercadoazul.com.mx/"
                   target="_blank"
                   rel="noopener noreferrer"
                   ><img
